--- a/css/styles.css
+++ b/css/styles.css
@@ -14,3 +14,15 @@ body  {
 .hidden {
   display: none;
 }
+#ageError {
+  color: #FF0000;
+  font-size: 1.5em;
+}
+#genderError  {
+  color: #FF0000;
+  font-size: 1.5em;
+}
+#error  {
+  color: #FF0000;
+  font-size: 2.1em;
+}
